# yumiriam.github.io

./: .buildinfo  .gitignore  Makefile  README.md  blog  blog.html  genindex.html  git_guide.md  glossario.html  glossario.md  glossario_grafos.html  glossario_grafos.md  glossario_grafos.md~  glossario_md.md  grafos.html  hextocolor.html  index.bkp.html  index.html  menu.html  nav.html  objects.inv  params.json  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sobre.html
.github/workflows/: sphinx_docs_to_gh_pages.yaml
_sources/: index.rst.txt
_sources/posts/202110/: 20211017.rst.txt
_static/: documentation_options.js
archive/: git_guide.md  glossario_grafos.md  glossario_md.md
archive/css/: style.css
blog/: 2021.html  archive.html  author.html  blog.html  category.html  drafts.html  tag.html
blog/.doctrees/: environment.pickle  index.doctree
blog/_sources/glossarios/: grafos.rst.txt
blog/author/: yumiriam.html
blog/blog/: 2021.html  archive.html  author.html  drafts.html
blog/category/: projetos-embarcados.html
blog/glossarios/: grafos.html
blog/tag/: beaglebone.html  dolar.html  economia.html  omega2.html
css/: jd.gallery.css  style.css
devtools/conda-envs/: docs_env.yaml
glossarios/: grafos.html  index.html  md.html
posts/202110/: 20211017.html
scripts/: jd.gallery.agora.js  jd.gallery.transitions.js
source/: conf.py
source/.doctrees/: environment.pickle  index.doctree
source/_website/: .buildinfo  blog.html  index.html  objects.inv  search.html  searchindex.js
source/glossarios/: md.rst
(+46 files in other folders)
