[metadata]
name = yumiriam_gh_pages
version = attr: yumiriam_gh_pages.VERSION
description = My personal page in Github
long_description = file: README.rst
keywords = sphinx, gh_pages
license = BSD 3-Clause License
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Documentation

[options.extras_require]

blog =
  sphinx
  ablog
  pydata-sphinx-theme
  sphinx-panels
  sphinx-icon
